--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ Logs/
 
 # User-specific files
 .vscode/
+/.vs/HigzTrade/FileContentIndex/090e3375-2e5f-439b-9be5-f10b93fb1578.vsidx
+/.vs/HigzTrade/FileContentIndex/65fd228f-3124-476d-ac4d-986503883b4f.vsidx
+/.vs/HigzTrade/FileContentIndex/ded2191a-a846-4e16-942c-999d81d484bb.vsidx
