--- a/HigzTrade.TradeApi/appsettings.json
+++ b/HigzTrade.TradeApi/appsettings.json
@@ -20,7 +20,8 @@
       "Default": "Information", // 1. ระดับเริ่มต้น: เก็บทุกอย่างตั้งแต่ระดับ Debug ขึ้นไป (Debug, Info, Warn, Error, Fatal)
       "Override": {
         "Microsoft": "Warning", // 2. ยกเว้น Microsoft: ถ้าเป็น Log จากตัว .NET เอง (เช่น Entity Framework)   ให้เอาแค่ Warning ขึ้นไปพอ  
-        "System": "Warning" // 3. ยกเว้น System: ระบบภายในถ้าไม่เตือน (Warning) ก็ไม่ต้องบอก 
+        "System": "Warning", // 3. ยกเว้น System: ระบบภายในถ้าไม่เตือน (Warning) ก็ไม่ต้องบอก 
+        "Microsoft.AspNetCore.Diagnostics.ExceptionHandlerMiddleware": "Fatal"
       }
     },
     "WriteTo": [
