--- a/HigzTrade.TradeApi/HigzTrade.TradeApi.csproj
+++ b/HigzTrade.TradeApi/HigzTrade.TradeApi.csproj
@@ -28,6 +28,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Extensions\ExceptionExtensions.cs" />
+    <Compile Remove="Extensions\FilterExtension.cs" />
+    <Compile Remove="Extensions\SecurityExtension.cs" />
+    <Compile Remove="Extensions\SerilogOptionsExtension.cs" />
+    <Compile Remove="Middlewares\ExceptionHandlingMiddleware - Copy.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="10.0.0" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
