--- a/HigzTrade.Infrastructure/HigzTrade.Infrastructure.csproj
+++ b/HigzTrade.Infrastructure/HigzTrade.Infrastructure.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HigzTrade.Application\HigzTrade.Application.csproj" />
     <ProjectReference Include="..\HigzTrade.Domain\HigzTrade.Domain.csproj" />
   </ItemGroup>
 
